--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d boild",
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
