for github-pages deployment

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "start": "react-scripts start",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d boild",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
